--- a/src/scss/ui/_dropdown.scss
+++ b/src/scss/ui/_dropdown.scss
@@ -14,7 +14,7 @@
         }
         &:has(hr):focus,
         &:has(hr):hover{
-            background-color: #ffffff!important;
+            background-color: transparent!important;
         }
         span {
             margin-left: 30px;
