--- a/src/scss/ui/_modal.scss
+++ b/src/scss/ui/_modal.scss
@@ -24,6 +24,7 @@
             @extend .modal-content;
             max-height: calc(100svh - 56px);
             border-radius: var(--modal-radius);
+            height: auto;
             border: none;
             -webkit-box-shadow: 0px 0px 15px px rgba(0, 0, 0, 0.35);
             -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.35);
